# Matrix-Calculator

./: .coverage  .coveragerc  .gitignore  READ.md  README.md  kayttoohje.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  tuntikirjanpito.md.save  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .coverage  database.db  index.py  pyproject.toml
src/matrixcalculator/: matrix.py  matrixlogic.py
src/repositories/: user_repository.py
src/services/: user_service.py
src/tests/: matrixlogic_test.py  user_repository_test.py
src/tests/matrixlogic/: matrixlogic_test.py
src/tests/user_services/: user_service_test.py
src/ui/: login.py  tt.py  ui.py
